--- a/.cdk/package.json
+++ b/.cdk/package.json
@@ -1,14 +1,11 @@
 {
-  "name": ".cdk",
+  "name": "web-resume-rust-cdk",
   "version": "0.1.0",
   "bin": {
     ".cdk": "bin/.cdk.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
-    "cdk": "cdk"
+    "deploy": "cdk synth && cdk deploy WebResumeRustStack"
   },
   "devDependencies": {
     "@types/node": "18.11.15",
